// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`@koi/core API surface . has stable type surface 1`] = `
"import { B as BrickRef, a as BrickKind } from './brick-snapshot-DTdsYtdz.js';
export { A as ALL_BRICK_KINDS, b as BrickId, c as BrickLifecycle, d as BrickSnapshot, e as BrickSource, F as ForgeScope, M as MIN_TRUST_BY_KIND, S as SnapshotEvent, f as SnapshotId, g as SnapshotQuery, h as SnapshotStore, V as VALID_LIFECYCLE_TRANSITIONS, i as brickId, s as snapshotId } from './brick-snapshot-DTdsYtdz.js';
import { A as AgentId, P as ProcessState, T as Tool, S as SkillComponent, a as AgentDescriptor, b as Agent, c as SessionId, d as ToolCallId } from './ecs-Buyeyz14.js';
export { B as BROWSER, e as BrowserActionOptions, f as BrowserConsoleEntry, g as BrowserConsoleLevel, h as BrowserConsoleOptions, i as BrowserConsoleResult, j as BrowserDriver, k as BrowserEvaluateOptions, l as BrowserEvaluateResult, m as BrowserFormField, n as BrowserNavigateOptions, o as BrowserNavigateResult, p as BrowserRefInfo, q as BrowserScreenshotOptions, r as BrowserScreenshotResult, s as BrowserScrollOptions, t as BrowserSnapshotOptions, u as BrowserSnapshotResult, v as BrowserTabCloseOptions, w as BrowserTabFocusOptions, x as BrowserTabInfo, y as BrowserTabNewOptions, z as BrowserTraceOptions, C as BrowserTraceResult, D as BrowserTypeOptions, E as BrowserUploadFile, F as BrowserUploadOptions, G as BrowserWaitOptions, H as BrowserWaitUntil, I as COMPONENT_PRIORITY, J as CREDENTIALS, K as ChildHandle, L as ChildLifecycleEvent, M as ComponentEvent, N as ComponentEventKind, O as ComponentProvider, Q as CredentialComponent, R as DELEGATION, U as EVENTS, V as EventComponent, W as FILESYSTEM, X as GOVERNANCE, Y as GovernanceComponent, Z as GovernanceUsage, _ as MEMORY, $ as MemoryComponent, a0 as MemoryResult, a1 as ProcessAccounter, a2 as ProcessId, a3 as RunId, a4 as SkillMetadata, a5 as SpawnCheck, a6 as SpawnLedger, a7 as SubsystemToken, a8 as ToolDescriptor, a9 as TrustTier, aa as TurnId, ab as agentId, ac as agentToken, ad as channelToken, ae as middlewareToken, af as runId, ag as sessionId, ah as skillToken, ai as token, aj as toolCallId, ak as toolToken, al as turnId } from './ecs-Buyeyz14.js';
import { E as EngineState, a as EngineInput } from './engine-Cs5G9xiO.js';
export { A as AbortReason, C as ComposedCallHandlers, b as CorrelationIds, c as EngineAdapter, d as EngineEvent, e as EngineInputBase, f as EngineMetrics, g as EngineOutput, h as EngineStopReason } from './engine-Cs5G9xiO.js';
import { Result, KoiError } from './errors.js';
export { BackendErrorMapper, KoiErrorCode, RETRYABLE_DEFAULTS } from './errors.js';
import { A as AgentManifest } from './assembly-Bp5WuiM8.js';
export { C as ChannelConfig, a as ChannelIdentity, b as CircuitBreakerConfig, D as DEFAULT_CIRCUIT_BREAKER_CONFIG, c as DelegationComponent, d as DelegationConfig, e as DelegationDenyReason, f as DelegationEvent, g as DelegationGrant, h as DelegationId, i as DelegationManagerConfig, j as DelegationScope, k as DelegationVerifyResult, M as MiddlewareConfig, l as ModelConfig, P as PermissionConfig, R as RevocationRegistry, S as ScopeChecker, T as ToolConfig, m as delegationId } from './assembly-Bp5WuiM8.js';
import { JsonObject } from './common.js';
import { I as ImplementationArtifact, B as BrickArtifact } from './brick-store-wnveACXa.js';
export { A as AdvisoryLock, a as AgentArtifact, b as BrickArtifactBase, c as BrickRequires, d as BrickUpdate, C as ContentMarker, D as DataClassification, F as ForgeAttestationSignature, e as ForgeBuildDefinition, f as ForgeBuilder, g as ForgeProvenance, h as ForgeQuery, i as ForgeResourceRef, j as ForgeRunMetadata, k as ForgeStageDigest, l as ForgeStore, m as ForgeVerificationSummary, L as LockHandle, n as LockMode, o as LockRequest, S as SigningBackend, p as SkillArtifact, q as StoreChangeEvent, r as StoreChangeKind, s as StoreChangeNotifier, T as TestCase, t as ToolArtifact } from './brick-store-wnveACXa.js';
export { ChannelAdapter, ChannelCapabilities, ChannelStatus, ChannelStatusKind, MessageHandler } from './channel.js';
export { ConfigListener, ConfigSource, ConfigStore, ConfigUnsubscribe, FeatureFlags, ForgeConfigSection, KoiConfig, LimitsConfig, LogLevel, LoopDetectionConfigSection, ModelRouterConfigSection, ModelTargetConfigEntry, SpawnConfig, TelemetryConfig } from './config.js';
export { CompactionResult, ContextCompactor, TokenEstimator } from './context.js';
export { DeadLetterEntry, DeadLetterFilter, EventBackend, EventBackendConfig, EventEnvelope, EventInput, ReadOptions, ReadResult, SubscribeOptions, SubscriptionHandle } from './event-backend.js';
export { EvictionCandidate, EvictionPolicy, EvictionReason, EvictionResult } from './eviction.js';
export { FileEdit, FileEditOptions, FileEditResult, FileEntryKind, FileListEntry, FileListOptions, FileListResult, FileReadOptions, FileReadResult, FileSearchMatch, FileSearchOptions, FileSearchResult, FileSystemBackend, FileWriteOptions, FileWriteResult } from './filesystem-backend.js';
export { DEFAULT_HEALTH_MONITOR_CONFIG, HealthMonitor, HealthMonitorConfig, HealthMonitorStats, HealthSnapshot, HealthStatus } from './health.js';
import { KoiMiddleware } from './middleware.js';
export { ApprovalDecision, ApprovalHandler, ApprovalRequest, ModelChunk, ModelHandler, ModelRequest, ModelResponse, ModelStreamHandler, SessionContext, ToolHandler, ToolRequest, ToolResponse, TurnContext } from './middleware.js';
import { AgentRegistry } from './lifecycle.js';
export { AgentCondition, AgentStatus, RegistryEntry, RegistryEvent, RegistryFilter, TransitionReason, VALID_TRANSITIONS } from './lifecycle.js';
export { ButtonBlock, ContentBlock, CustomBlock, FileBlock, ImageBlock, InboundMessage, OutboundMessage, TextBlock } from './message.js';
export { ModelCapabilities, ModelProvider, ModelTarget } from './model-provider.js';
export { Resolver, SourceBundle, SourceLanguage } from './resolver.js';
export { SandboxAdapter, SandboxAdapterResult, SandboxExecOptions, SandboxInstance } from './sandbox-adapter.js';
export { SandboxError, SandboxErrorCode, SandboxExecutor, SandboxResult, TierResolution, TieredSandboxExecutor } from './sandbox-executor.js';
export { FilesystemPolicy, NetworkPolicy, ResourceLimits, SandboxProfile } from './sandbox-profile.js';
export { DEFAULT_SKILL_SEARCH_LIMIT, SkillId, SkillPage, SkillPublishRequest, SkillRegistryBackend, SkillRegistryChangeEvent, SkillRegistryChangeKind, SkillRegistryEntry, SkillRegistryReader, SkillRegistryWriter, SkillSearchQuery, SkillVersion, skillId } from './skill-registry.js';
export { OutboundWebhookConfig, WebhookDeliveryStatus, WebhookEventKind, WebhookPayload } from './webhook.js';

/**
 * Generic snapshot chain types — immutable DAG for time travel, fork, and recovery.
 *
 * \`SnapshotChainStore<T>\` is a generic interface for versioned snapshot chains.
 * It supports linear history, branching (DAG with \`parentIds[]\`), ancestor
 * walking, and pruning. Reusable for agents (via AgentSnapshot) and bricks.
 */

declare const __chainIdBrand: unique symbol;
/** Branded string for chain identity. Each chain is an independent snapshot sequence. */
type ChainId = string & {
    readonly [__chainIdBrand]: "ChainId";
};
/** Create a ChainId from a raw string. */
declare function chainId(raw: string): ChainId;
declare const __nodeIdBrand: unique symbol;
/** Branded string for node identity. Each node is a unique snapshot in the DAG. */
type NodeId = string & {
    readonly [__nodeIdBrand]: "NodeId";
};
/** Create a NodeId from a raw string. */
declare function nodeId(raw: string): NodeId;
/** An immutable node in a snapshot chain DAG. */
interface SnapshotNode<T> {
    /** Unique identifier for this node. */
    readonly nodeId: NodeId;
    /** The chain this node belongs to. */
    readonly chainId: ChainId;
    /** Parent node IDs. Empty = root, one = linear, many = merge. */
    readonly parentIds: readonly NodeId[];
    /** Content hash for deduplication (skip-if-unchanged). */
    readonly contentHash: string;
    /** The snapshot payload. */
    readonly data: T;
    /** Unix timestamp ms when this node was created. */
    readonly createdAt: number;
    /** Arbitrary metadata (e.g., trigger reason, actor). */
    readonly metadata: Readonly<Record<string, unknown>>;
}
/** Pointer from a forked chain back to its source node. */
interface ForkRef {
    /** The node in the source chain that was forked from. */
    readonly parentNodeId: NodeId;
    /** Human-readable label for the fork (e.g., "experiment-a"). */
    readonly label: string;
}
/** Parameters for ancestor walking. */
interface AncestorQuery {
    /** Node to start walking from. */
    readonly startNodeId: NodeId;
    /** Maximum depth to walk (undefined = walk to root). */
    readonly maxDepth?: number;
}
/** Policy for pruning old snapshots from a chain. */
interface PruningPolicy {
    /** Maximum number of nodes to retain. */
    readonly retainCount?: number;
    /** Maximum age in ms. Nodes older than \`Date.now() - retainDuration\` are pruned. */
    readonly retainDuration?: number;
    /** If true, protect branch head nodes from pruning. Default: true. */
    readonly retainBranches?: boolean;
}
/** Options for the \`put\` operation. */
interface PutOptions {
    /** If true, skip the write when contentHash matches the current head. */
    readonly skipIfUnchanged?: boolean;
}
/**
 * Optional strategy for compacting a chain by summarizing old nodes.
 * Future use — not required for v1.
 */
interface ChainCompactor<T> {
    /** Summarize a sequence of nodes into a single compacted node. */
    readonly compact: (nodes: readonly SnapshotNode<T>[]) => T;
}
/**
 * Generic snapshot chain store supporting DAG topology, content-hash dedup,
 * ancestor walking, forking, and pruning.
 *
 * All fallible operations return \`Result<T, KoiError> | Promise<Result<T, KoiError>>\`
 * so implementations can be sync (in-memory) or async (SQLite/network).
 */
interface SnapshotChainStore<T> {
    /**
     * Append a new snapshot node to a chain.
     *
     * @param chainId - Target chain. Created implicitly if it doesn't exist.
     * @param data - The snapshot payload.
     * @param parentIds - Parent node IDs. Empty for root nodes.
     * @param metadata - Optional metadata for this node.
     * @param options - Put options (e.g., skipIfUnchanged).
     * @returns The created node, or undefined if skipped due to unchanged content.
     */
    readonly put: (chainId: ChainId, data: T, parentIds: readonly NodeId[], metadata?: Readonly<Record<string, unknown>>, options?: PutOptions) => Result<SnapshotNode<T> | undefined, KoiError> | Promise<Result<SnapshotNode<T> | undefined, KoiError>>;
    /** Retrieve a single node by ID. */
    readonly get: (nodeId: NodeId) => Result<SnapshotNode<T>, KoiError> | Promise<Result<SnapshotNode<T>, KoiError>>;
    /** Get the current head (most recent node) of a chain. Undefined if chain is empty. */
    readonly head: (chainId: ChainId) => Result<SnapshotNode<T> | undefined, KoiError> | Promise<Result<SnapshotNode<T> | undefined, KoiError>>;
    /** List all nodes in a chain, newest first. */
    readonly list: (chainId: ChainId) => Result<readonly SnapshotNode<T>[], KoiError> | Promise<Result<readonly SnapshotNode<T>[], KoiError>>;
    /** Walk ancestors from a start node, optionally limited by depth. */
    readonly ancestors: (query: AncestorQuery) => Result<readonly SnapshotNode<T>[], KoiError> | Promise<Result<readonly SnapshotNode<T>[], KoiError>>;
    /**
     * Create a new chain forked from a node in an existing chain.
     * Returns a ForkRef describing the branch point.
     */
    readonly fork: (sourceNodeId: NodeId, newChainId: ChainId, label: string) => Result<ForkRef, KoiError> | Promise<Result<ForkRef, KoiError>>;
    /** Prune nodes from a chain according to a policy. Returns the number of nodes removed. */
    readonly prune: (chainId: ChainId, policy: PruningPolicy) => Result<number, KoiError> | Promise<Result<number, KoiError>>;
    /** Close the store and release resources. */
    readonly close: () => void | Promise<void>;
}

/**
 * AgentSnapshot — per-agent state capture for time travel, fork, and recovery.
 *
 * Subsumes SessionCheckpoint as the single source of truth for agent state.
 * Used as the payload type \`T\` in \`SnapshotChainStore<AgentSnapshot>\`.
 */

/**
 * Immutable snapshot of an agent's complete state at a point in time.
 *
 * Contains everything needed to restore an agent: engine state, process phase,
 * generation counter, attached components (as BrickRefs), and config.
 */
interface AgentSnapshot {
    /** The agent this snapshot belongs to. */
    readonly agentId: AgentId;
    /** Gateway session this agent was part of. */
    readonly sessionId: string;
    /** Opaque engine state from EngineAdapter.saveState(). */
    readonly engineState: EngineState;
    /** Lifecycle phase at snapshot time. */
    readonly processState: ProcessState;
    /** CAS generation counter from AgentStatus. */
    readonly generation: number;
    /** Attached components as lightweight brick references. */
    readonly components: ReadonlyMap<string, BrickRef>;
    /** Agent configuration snapshot (opaque, agent-defined). */
    readonly config: unknown;
    /** Arbitrary metadata (e.g., trigger reason). */
    readonly metadata: Readonly<Record<string, unknown>>;
}
/** A SnapshotChainStore specialized for AgentSnapshot payloads. */
type AgentSnapshotStore = SnapshotChainStore<AgentSnapshot>;

/**
 * Audit backend — structured audit logging contract (Layer 0).
 *
 * Defines the shape of audit entries, sinks, and redaction rules.
 * L2 packages implement AuditSink for specific backends (console, Nexus, etc.).
 */

interface AuditEntry {
    readonly timestamp: number;
    readonly sessionId: string;
    readonly agentId: string;
    readonly turnIndex: number;
    readonly kind: "model_call" | "tool_call" | "session_start" | "session_end";
    readonly request?: unknown;
    readonly response?: unknown;
    readonly error?: unknown;
    readonly durationMs: number;
    readonly metadata?: JsonObject;
}
interface AuditSink {
    readonly log: (entry: AuditEntry) => Promise<void>;
    readonly flush?: () => Promise<void>;
}
interface RedactionRule {
    readonly pattern: RegExp;
    readonly replacement: string;
}

/**
 * BrickComponentMap — maps each BrickKind to its ECS component type.
 * Used by ForgeRuntime.resolve() for type-safe per-kind resolution.
 */

interface BrickComponentMap {
    readonly tool: Tool;
    readonly skill: SkillComponent;
    readonly agent: AgentDescriptor;
    readonly middleware: ImplementationArtifact;
    readonly channel: ImplementationArtifact;
}

/**
 * BrickRegistryBase — generic brick discovery, publishing, and installation.
 *
 * Shared reader/writer base with cursor-based pagination.
 * Per-kind extensions (e.g., ToolRegistryReader with inputSchema search)
 * can extend these interfaces without duplicating the base surface.
 */

interface BrickSearchQuery {
    readonly kind?: BrickKind;
    readonly text?: string;
    readonly tags?: readonly string[];
    readonly limit?: number;
    readonly cursor?: string;
}
declare const DEFAULT_BRICK_SEARCH_LIMIT: 50;
interface BrickPage {
    readonly items: readonly BrickArtifact[];
    readonly cursor?: string;
    readonly total?: number;
}
type BrickRegistryChangeKind = "registered" | "unregistered" | "updated";
interface BrickRegistryChangeEvent {
    readonly kind: BrickRegistryChangeKind;
    readonly brickKind: BrickKind;
    readonly name: string;
}
interface BrickRegistryReader {
    readonly search: (query: BrickSearchQuery) => BrickPage | Promise<BrickPage>;
    readonly get: (kind: BrickKind, name: string) => Result<BrickArtifact, KoiError> | Promise<Result<BrickArtifact, KoiError>>;
    readonly onChange?: (listener: (event: BrickRegistryChangeEvent) => void) => () => void;
}
interface BrickRegistryWriter {
    readonly register: (brick: BrickArtifact) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    readonly unregister: (kind: BrickKind, name: string) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
}
interface BrickRegistryBackend extends BrickRegistryReader, BrickRegistryWriter {
}

/**
 * Pure data constructors for KoiError objects.
 *
 * Eliminates duplication of error helper functions across store
 * implementations. Each factory is a zero-logic identity function
 * that returns a KoiError with correct code, retryability, and context.
 *
 * Exception: These are pure data constructors (like branded type casts),
 * permitted in L0 per architecture doc.
 */

/** Resource not found. Non-retryable. */
declare function notFound(resourceId: string, message?: string): KoiError;
/** Resource already exists. Retryable (with merge). */
declare function conflict(resourceId: string, message?: string): KoiError;
/** Invalid input or parameters. Non-retryable. */
declare function validation(message: string): KoiError;
/** Unexpected internal error. Non-retryable. */
declare function internal(message: string, cause?: unknown): KoiError;
/** Rate limit exceeded. Retryable (with backoff). */
declare function rateLimit(message: string, context?: JsonObject): KoiError;
/** Operation timed out. Retryable (with backoff). */
declare function timeout(message: string, retryAfterMs?: number): KoiError;
/** Third-party service failure. Not retryable by default. */
declare function external(message: string, cause?: unknown): KoiError;
/** Unauthorized action. Non-retryable. */
declare function permission(message: string): KoiError;
/**
 * A cached reference has become invalid because the underlying resource changed.
 * Non-retryable as-is — the caller must re-acquire a fresh reference first.
 *
 * @param refId - The stale reference identifier (e.g., "e1", "cursor-42").
 * @param hint - Optional actionable hint for the caller (e.g., "call browser_snapshot").
 */
declare function staleRef(refId: string, hint?: string): KoiError;

/**
 * Kernel extension contract — pluggable L1 guard/lifecycle/assembly slots.
 *
 * Extensions allow composable, replaceable kernel behaviors without forking
 * createKoi(). Guard slots produce KoiMiddleware (sole interposition layer),
 * lifecycle validators gate state transitions, and assembly validators
 * verify component correctness before an agent starts.
 *
 * Exception: EXTENSION_PRIORITY constant is permitted in L0 as a pure
 * readonly data constant derived from L0 type definitions with zero logic.
 */

/**
 * Priority tiers for KernelExtension ordering.
 * Lower number = higher precedence (runs first / takes priority).
 * Order: Core > Platform > User > Addon.
 */
declare const EXTENSION_PRIORITY: Readonly<{
    readonly CORE: 0;
    readonly PLATFORM: 10;
    readonly USER: 50;
    readonly ADDON: 100;
}>;
/**
 * Context provided to a KernelExtension's guard slot at assembly time.
 * Guards use this to produce middleware tailored to the current agent.
 */
interface GuardContext {
    /** Depth of the agent in the process tree (0 = root). */
    readonly agentDepth: number;
    /** The agent's manifest. */
    readonly manifest: AgentManifest;
    /** All attached components as a readonly map. */
    readonly components: ReadonlyMap<string, unknown>;
    /** The assembled agent entity (for GovernanceComponent lookup, etc.). */
    readonly agent?: Agent;
}
/**
 * Context for lifecycle transition validation.
 * Validators receive the current and target states.
 */
interface TransitionContext {
    /** Current process state before the transition. */
    readonly from: ProcessState;
    /** Target process state after the transition. */
    readonly to: ProcessState;
}
/** A single diagnostic produced by assembly validation. */
interface ValidationDiagnostic {
    /** Name of the extension or validator that produced this diagnostic. */
    readonly source: string;
    /** Human-readable description of the issue. */
    readonly message: string;
    /** Severity: "error" blocks agent creation, "warning" is advisory. */
    readonly severity: "error" | "warning";
}
/** Result of assembly validation — discriminated union. */
type ValidationResult = {
    readonly ok: true;
} | {
    readonly ok: false;
    readonly diagnostics: readonly ValidationDiagnostic[];
};
/**
 * A composable kernel extension that plugs into L1 guard, lifecycle,
 * and assembly validation slots.
 *
 * All slots are optional — an extension can provide any combination.
 * Extensions are sorted by priority (ascending) before composition.
 */
interface KernelExtension {
    /** Unique name for this extension (e.g., "koi:default-guards"). */
    readonly name: string;
    /**
     * Extension priority. Lower = higher precedence.
     * Defaults to EXTENSION_PRIORITY.USER (50) if omitted.
     */
    readonly priority?: number;
    /**
     * Guard slot — produces KoiMiddleware for the agent session.
     * Called once at assembly time. The returned middleware array is
     * composed into the agent's middleware chain.
     */
    readonly guards?: (ctx: GuardContext) => readonly KoiMiddleware[] | Promise<readonly KoiMiddleware[]>;
    /**
     * Lifecycle transition validator — sync only for hot-path performance.
     * Returns true to allow the transition, false to block it.
     * Only called for significant transitions (not wait/resume hot path).
     */
    readonly validateTransition?: (ctx: TransitionContext) => boolean;
    /**
     * Assembly validator — checks component/manifest correctness before
     * the agent starts running. Can be async for I/O-backed validation.
     * Return { ok: true } to pass, or { ok: false, diagnostics } to report issues.
     */
    readonly validateAssembly?: (components: ReadonlyMap<string, unknown>, manifest: AgentManifest) => ValidationResult | Promise<ValidationResult>;
}

/**
 * Reconciliation contract — K8s-style desired-state convergence.
 *
 * Defines the extension point for L2 reconciliation controllers and the
 * configuration surface for the L1 reconcile runner. Controllers implement
 * \`observe(actual) → diff(desired) → act()\` loops that converge the system
 * to its declared desired state.
 *
 * Exception: DEFAULT_RECONCILE_RUNNER_CONFIG is a pure readonly data constant
 * derived from L0 type definitions, codifying architecture-doc invariants.
 */

/** Discriminated union describing the outcome of a single reconcile pass. */
type ReconcileResult = {
    readonly kind: "converged";
} | {
    readonly kind: "retry";
    readonly afterMs: number;
} | {
    readonly kind: "terminal";
    readonly reason: string;
} | {
    readonly kind: "recheck";
    readonly afterMs: number;
};
/** Read-only context provided to each reconciliation controller invocation. */
interface ReconcileContext {
    readonly registry: AgentRegistry;
    readonly manifest: AgentManifest;
}
/**
 * A reconciliation controller observes actual state, diffs against desired
 * state (manifest), and returns an action result. The runner calls each
 * registered controller for every enqueued agent.
 *
 * Level-triggered: the controller re-reads current state on each invocation
 * rather than relying on edge-triggered event payloads.
 */
interface ReconciliationController extends AsyncDisposable {
    readonly name: string;
    readonly reconcile: (agentId: AgentId, ctx: ReconcileContext) => ReconcileResult | Promise<ReconcileResult>;
}
/** Configurable options for the reconcile runner processing loop. */
interface ReconcileRunnerConfig {
    /** Interval between drift sweep scans of running agents (ms). Default: 60_000. */
    readonly driftCheckIntervalMs: number;
    /** Timeout for a single controller.reconcile() call (ms). Default: 30_000. */
    readonly reconcileTimeoutMs: number;
    /** Consecutive failures before circuit-breaking an agent+controller pair. Default: 5. */
    readonly maxConsecutiveFailures: number;
    /** Base delay for decorrelated jitter backoff (ms). Default: 100. */
    readonly backoffBaseMs: number;
    /** Maximum backoff cap (ms). Default: 30_000. */
    readonly backoffCapMs: number;
    /** Minimum interval between reconcile passes for the same agent (ms). Default: 5_000. */
    readonly minReconcileIntervalMs: number;
    /** Maximum concurrent async reconciles. 0 = unlimited. Default: 10. */
    readonly maxConcurrentReconciles: number;
}
/** Sensible defaults for the reconcile runner. */
declare const DEFAULT_RECONCILE_RUNNER_CONFIG: ReconcileRunnerConfig;

/**
 * Scheduler contract — pluggable task scheduling, priority queue, cron,
 * and dead-letter queue for agent message dispatch.
 *
 * A "task" in Koi = deliver input to an agent (new or existing) at a
 * scheduled time/priority. The scheduler is a message dispatch service,
 * not arbitrary code execution.
 *
 * Exception: branded type constructors (taskId, scheduleId) are permitted
 * in L0 as zero-logic identity casts for type safety.
 * Exception: DEFAULT_SCHEDULER_CONFIG is a pure readonly data constant
 * derived from L0 type definitions.
 */

declare const __taskBrand: unique symbol;
/** Branded string type for scheduled task identifiers. */
type TaskId = string & {
    readonly [__taskBrand]: "TaskId";
};
declare const __scheduleBrand: unique symbol;
/** Branded string type for cron schedule identifiers. */
type ScheduleId = string & {
    readonly [__scheduleBrand]: "ScheduleId";
};
/** Create a branded TaskId from a plain string. */
declare function taskId(id: string): TaskId;
/** Create a branded ScheduleId from a plain string. */
declare function scheduleId(id: string): ScheduleId;
type TaskStatus = "pending" | "running" | "completed" | "failed" | "dead_letter";
interface ScheduledTask {
    readonly id: TaskId;
    readonly agentId: AgentId;
    readonly input: EngineInput;
    readonly mode: "spawn" | "dispatch";
    /** 0 = highest priority. */
    readonly priority: number;
    readonly status: TaskStatus;
    readonly createdAt: number;
    /** Unix timestamp ms for delayed execution. */
    readonly scheduledAt?: number | undefined;
    readonly startedAt?: number | undefined;
    readonly completedAt?: number | undefined;
    readonly retries: number;
    readonly maxRetries: number;
    /** Per-execution timeout in milliseconds. */
    readonly timeoutMs?: number | undefined;
    readonly lastError?: KoiError | undefined;
    readonly metadata?: Readonly<Record<string, unknown>> | undefined;
}
interface TaskOptions {
    /** Priority level (0 = highest). Default: 5. */
    readonly priority?: number | undefined;
    /** Defer execution by this many milliseconds. */
    readonly delayMs?: number | undefined;
    /** Maximum retry attempts. Default: 3. */
    readonly maxRetries?: number | undefined;
    /** Per-execution timeout in milliseconds. */
    readonly timeoutMs?: number | undefined;
    readonly metadata?: Readonly<Record<string, unknown>> | undefined;
}
interface CronSchedule {
    readonly id: ScheduleId;
    /** Cron expression (e.g., "0 0 * * *"). */
    readonly expression: string;
    readonly agentId: AgentId;
    readonly input: EngineInput;
    readonly mode: "spawn" | "dispatch";
    readonly taskOptions?: TaskOptions | undefined;
    readonly timezone?: string | undefined;
    readonly paused: boolean;
}
interface TaskFilter {
    readonly status?: TaskStatus | undefined;
    readonly agentId?: AgentId | undefined;
    readonly priority?: number | undefined;
    readonly limit?: number | undefined;
}
type SchedulerEvent = {
    readonly kind: "task:submitted";
    readonly task: ScheduledTask;
} | {
    readonly kind: "task:started";
    readonly taskId: TaskId;
} | {
    readonly kind: "task:completed";
    readonly taskId: TaskId;
    readonly result: unknown;
} | {
    readonly kind: "task:failed";
    readonly taskId: TaskId;
    readonly error: KoiError;
} | {
    readonly kind: "task:dead_letter";
    readonly taskId: TaskId;
    readonly error: KoiError;
} | {
    readonly kind: "task:cancelled";
    readonly taskId: TaskId;
} | {
    readonly kind: "task:recovered";
    readonly taskId: TaskId;
    readonly retriesUsed: number;
} | {
    readonly kind: "schedule:created";
    readonly schedule: CronSchedule;
} | {
    readonly kind: "schedule:removed";
    readonly scheduleId: ScheduleId;
};
interface TaskStore extends AsyncDisposable {
    readonly save: (task: ScheduledTask) => void | Promise<void>;
    readonly load: (id: TaskId) => ScheduledTask | undefined | Promise<ScheduledTask | undefined>;
    readonly remove: (id: TaskId) => void | Promise<void>;
    readonly updateStatus: (id: TaskId, status: TaskStatus, patch?: Partial<Pick<ScheduledTask, "startedAt" | "completedAt" | "lastError" | "retries">>) => void | Promise<void>;
    readonly query: (filter: TaskFilter) => readonly ScheduledTask[] | Promise<readonly ScheduledTask[]>;
    readonly loadPending: () => readonly ScheduledTask[] | Promise<readonly ScheduledTask[]>;
}
interface TaskScheduler extends AsyncDisposable {
    readonly submit: (agentId: AgentId, input: EngineInput, mode: "spawn" | "dispatch", options?: TaskOptions) => TaskId | Promise<TaskId>;
    readonly cancel: (id: TaskId) => boolean | Promise<boolean>;
    readonly schedule: (expression: string, agentId: AgentId, input: EngineInput, mode: "spawn" | "dispatch", options?: TaskOptions & {
        readonly timezone?: string | undefined;
    }) => ScheduleId | Promise<ScheduleId>;
    readonly unschedule: (id: ScheduleId) => boolean | Promise<boolean>;
    readonly query: (filter: TaskFilter) => readonly ScheduledTask[] | Promise<readonly ScheduledTask[]>;
    readonly stats: () => SchedulerStats;
    readonly watch: (listener: (event: SchedulerEvent) => void) => () => void;
}
interface SchedulerStats {
    readonly pending: number;
    readonly running: number;
    readonly completed: number;
    readonly failed: number;
    readonly deadLettered: number;
    readonly activeSchedules: number;
}
interface SchedulerConfig {
    readonly maxConcurrent: number;
    readonly defaultPriority: number;
    readonly defaultMaxRetries: number;
    readonly baseRetryDelayMs: number;
    readonly maxRetryDelayMs: number;
    readonly retryJitterMs: number;
    readonly pollIntervalMs: number;
    /** Threshold (ms) after which a "running" task is considered stale and eligible for recovery. */
    readonly staleTaskThresholdMs: number;
}
/** Default scheduler configuration. */
declare const DEFAULT_SCHEDULER_CONFIG: SchedulerConfig;
/** Persistence backend for cron schedule definitions. */
interface ScheduleStore extends AsyncDisposable {
    readonly saveSchedule: (schedule: CronSchedule) => void | Promise<void>;
    readonly removeSchedule: (id: ScheduleId) => void | Promise<void>;
    readonly loadSchedules: () => readonly CronSchedule[] | Promise<readonly CronSchedule[]>;
}

/**
 * Session persistence contract — L0 types for crash recovery.
 *
 * Promoted from @koi/session-store so that both @koi/session-store (L2)
 * and @koi/node (L2) can depend on the same contract without L2→L2 imports.
 *
 * Implementation-specific config (dbPath, durability) stays in L2.
 */

interface SessionCheckpoint {
    /** Unique checkpoint ID (e.g., \`\${agentId}:\${Date.now()}\`). */
    readonly id: string;
    /** Agent this checkpoint belongs to. */
    readonly agentId: AgentId;
    /** Gateway session this agent was part of. */
    readonly sessionId: SessionId;
    /** Opaque engine state from EngineAdapter.saveState(). */
    readonly engineState: EngineState;
    /** Lifecycle phase at checkpoint time. */
    readonly processState: ProcessState;
    /** CAS generation counter from AgentStatus. */
    readonly generation: number;
    /** Arbitrary metadata (e.g., trigger reason). */
    readonly metadata: Readonly<Record<string, unknown>>;
    /** Unix timestamp ms when this checkpoint was created. */
    readonly createdAt: number;
}
interface SessionRecord {
    /** Gateway session ID. */
    readonly sessionId: SessionId;
    /** Agent this session belongs to. */
    readonly agentId: AgentId;
    /** Agent manifest snapshot for re-assembly on recovery. */
    readonly manifestSnapshot: AgentManifest;
    /** Outbound sequence counter. */
    readonly seq: number;
    /** Last accepted inbound sequence from remote. */
    readonly remoteSeq: number;
    /** Unix timestamp ms when session was created. */
    readonly connectedAt: number;
    /** Unix timestamp ms of the most recent checkpoint. */
    readonly lastCheckpointAt: number;
    /** Arbitrary metadata. */
    readonly metadata: Readonly<Record<string, unknown>>;
}
interface PendingFrame {
    /** Unique frame identifier. */
    readonly frameId: string;
    /** Session this frame belongs to. */
    readonly sessionId: SessionId;
    /** Agent that originated this frame. */
    readonly agentId: AgentId;
    /** Frame type discriminator (e.g., "agent:message"). */
    readonly frameType: string;
    /** Serialized frame payload. */
    readonly payload: unknown;
    /** Ordering index within the session's pending queue. */
    readonly orderIndex: number;
    /** Unix timestamp ms when this frame was buffered. */
    readonly createdAt: number;
    /** Optional time-to-live in ms. Undefined = no expiry. */
    readonly ttl?: number | undefined;
    /** Number of delivery attempts. 0 = never attempted. */
    readonly retryCount: number;
}
interface SkippedRecoveryEntry {
    /** Which table the corrupt row came from. */
    readonly source: "session" | "checkpoint" | "pending_frame";
    /** Row identifier (sessionId, checkpoint id, or frameId). */
    readonly id: string;
    /** Human-readable error description. */
    readonly error: string;
}
interface RecoveryPlan {
    /** All session records found in the store. */
    readonly sessions: readonly SessionRecord[];
    /** Latest checkpoint per agent (keyed by agentId string). */
    readonly checkpoints: ReadonlyMap<string, SessionCheckpoint>;
    /** Pending outbound frames per session (keyed by sessionId). */
    readonly pendingFrames: ReadonlyMap<string, readonly PendingFrame[]>;
    /** Rows that could not be deserialized (corrupt JSON, invalid state, etc.). */
    readonly skipped: readonly SkippedRecoveryEntry[];
}
interface SessionFilter {
    readonly agentId?: AgentId;
    readonly processState?: ProcessState;
}
/**
 * Pluggable interface for durable session storage.
 *
 * All methods return \`T | Promise<T>\` — in-memory implementations are sync,
 * SQLite/network implementations are async. Callers must always \`await\`.
 *
 * All fallible operations return \`Result<T, KoiError>\`.
 */
interface SessionPersistence {
    /** Save or update a session record. */
    readonly saveSession: (record: SessionRecord) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Load a session record by session ID. NOT_FOUND if missing. */
    readonly loadSession: (sessionId: string) => Result<SessionRecord, KoiError> | Promise<Result<SessionRecord, KoiError>>;
    /** Remove a session record and its checkpoints. NOT_FOUND if missing. */
    readonly removeSession: (sessionId: string) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** List session records matching an optional filter. */
    readonly listSessions: (filter?: SessionFilter) => Result<readonly SessionRecord[], KoiError> | Promise<Result<readonly SessionRecord[], KoiError>>;
    /** Save a checkpoint. Prunes oldest if over retention limit. */
    readonly saveCheckpoint: (checkpoint: SessionCheckpoint) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Load the most recent checkpoint for an agent. Returns undefined if none. */
    readonly loadLatestCheckpoint: (agentId: AgentId) => Result<SessionCheckpoint | undefined, KoiError> | Promise<Result<SessionCheckpoint | undefined, KoiError>>;
    /** List all checkpoints for an agent, newest first. */
    readonly listCheckpoints: (agentId: AgentId) => Result<readonly SessionCheckpoint[], KoiError> | Promise<Result<readonly SessionCheckpoint[], KoiError>>;
    /** Save a pending outbound frame for replay after reconnection. */
    readonly savePendingFrame: (frame: PendingFrame) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Load all pending frames for a session, ordered by orderIndex. */
    readonly loadPendingFrames: (sessionId: string) => Result<readonly PendingFrame[], KoiError> | Promise<Result<readonly PendingFrame[], KoiError>>;
    /** Clear all pending frames for a session (after successful drain). */
    readonly clearPendingFrames: (sessionId: string) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Remove a single pending frame by ID. No-op if not found. */
    readonly removePendingFrame: (frameId: string) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /**
     * Build a full recovery plan from all stored data.
     * Returns all session records, the latest checkpoint per agent,
     * and pending frames per session. Corrupt rows are skipped and
     * reported in the \`skipped\` field.
     */
    readonly recover: () => Result<RecoveryPlan, KoiError> | Promise<Result<RecoveryPlan, KoiError>>;
    /** Close the store and release resources. */
    readonly close: () => void | Promise<void>;
}

/**
 * Time-travel types — filesystem side-effect journal, backtrack constraints,
 * and per-event trace types for rewind, guided retry, and event-level granularity.
 *
 * Used by L2 middleware packages:
 *   - @koi/middleware-fs-rollback (FileOpRecord, CompensatingOp)
 *   - @koi/middleware-guided-retry (BacktrackReason, BacktrackConstraint)
 *   - @koi/middleware-event-trace (TraceEventKind, TraceEvent, TurnTrace, EventCursor)
 */

/** Kind of filesystem operation that can be rewound. */
type FileOpKind = "write" | "edit";
/** Record of a single file operation captured during a tool call. */
interface FileOpRecord {
    /** Identifier of the tool call that produced this operation. */
    readonly callId: ToolCallId;
    /** Kind of file operation. */
    readonly kind: FileOpKind;
    /** Absolute path to the affected file. */
    readonly path: string;
    /** File content before the operation. undefined = file did not exist. */
    readonly previousContent: string | undefined;
    /** File content after the operation. */
    readonly newContent: string;
    /** Which turn this operation occurred in. */
    readonly turnIndex: number;
    /** Index within the event trace for cross-feature correlation. -1 = uncorrelated. */
    readonly eventIndex: number;
    /** Unix timestamp ms when this operation was captured. */
    readonly timestamp: number;
}
/** Action needed to undo a file operation. */
type CompensatingOp = {
    readonly kind: "restore";
    readonly path: string;
    readonly content: string;
} | {
    readonly kind: "delete";
    readonly path: string;
};
/** Why a backtrack/fork was triggered. */
type BacktrackReasonKind = "validation_failure" | "gate_failure" | "user_rejection" | "timeout" | "error" | "manual";
/** Structured reason for a backtrack event. */
interface BacktrackReason {
    readonly kind: BacktrackReasonKind;
    readonly message: string;
    readonly details?: Readonly<Record<string, unknown>>;
    /** NodeId of the snapshot that was abandoned (if available). */
    readonly abandonedNodeId?: string;
    readonly timestamp: number;
}
/** Constraint injected into the model call after a backtrack. */
interface BacktrackConstraint {
    readonly reason: BacktrackReason;
    /** Free-text guidance for the model (e.g., "prefer X", "avoid Y"). */
    readonly instructions?: string;
    /** Maximum number of model calls to inject this constraint into. Default: 1. */
    readonly maxInjections?: number;
}
/**
 * Metadata key used to store BacktrackReason in AgentSnapshot.metadata.
 * Convention: \`koi:\` prefix for framework-owned keys.
 */
declare const BACKTRACK_REASON_KEY: "koi:backtrack_reason";
/** Discriminated union of traceable event kinds. */
type TraceEventKind = {
    readonly kind: "model_call";
    readonly request: unknown;
    readonly response: unknown;
    readonly durationMs: number;
} | {
    readonly kind: "tool_call";
    readonly toolId: string;
    readonly callId: ToolCallId;
    readonly input: unknown;
    readonly output: unknown;
    readonly durationMs: number;
} | {
    readonly kind: "model_stream_start";
    readonly request: unknown;
} | {
    readonly kind: "model_stream_end";
    readonly response: unknown;
    readonly durationMs: number;
};
/** A single traced event with position metadata. */
interface TraceEvent {
    /** Monotonic index within the session. */
    readonly eventIndex: number;
    /** Turn this event belongs to. */
    readonly turnIndex: number;
    /** The event payload. */
    readonly event: TraceEventKind;
    /** Unix timestamp ms when this event was recorded. */
    readonly timestamp: number;
}
/** Complete trace of all events within a single turn. */
interface TurnTrace {
    readonly turnIndex: number;
    readonly sessionId: SessionId;
    readonly agentId: string;
    readonly events: readonly TraceEvent[];
    readonly durationMs: number;
}
/** Cursor pointing to a specific event within the trace. */
interface EventCursor {
    readonly turnIndex: number;
    readonly eventIndex: number;
}

/**
 * Validation utilities — pure functions for L0 type safety.
 *
 * isProcessState: runtime type guard matching the ProcessState union.
 * validateNonEmpty: shared validation helper for non-empty string fields.
 */

/**
 * Runtime type guard for ProcessState.
 * Returns true if the value is a valid ProcessState string.
 */
declare function isProcessState(value: string): value is ProcessState;
/**
 * Validate that a string is non-empty.
 * Returns a VALIDATION error Result if the string is empty.
 */
declare function validateNonEmpty(value: string, name: string): Result<void, KoiError>;

export { Agent, AgentDescriptor, AgentId, AgentManifest, AgentRegistry, type AgentSnapshot, type AgentSnapshotStore, type AncestorQuery, type AuditEntry, type AuditSink, BACKTRACK_REASON_KEY, type BacktrackConstraint, type BacktrackReason, type BacktrackReasonKind, BrickArtifact, type BrickComponentMap, BrickKind, type BrickPage, BrickRef, type BrickRegistryBackend, type BrickRegistryChangeEvent, type BrickRegistryChangeKind, type BrickRegistryReader, type BrickRegistryWriter, type BrickSearchQuery, type ChainCompactor, type ChainId, type CompensatingOp, type CronSchedule, DEFAULT_BRICK_SEARCH_LIMIT, DEFAULT_RECONCILE_RUNNER_CONFIG, DEFAULT_SCHEDULER_CONFIG, EXTENSION_PRIORITY, EngineInput, EngineState, type EventCursor, type FileOpKind, type FileOpRecord, type ForkRef, type GuardContext, ImplementationArtifact, JsonObject, type KernelExtension, KoiError, KoiMiddleware, type NodeId, type PendingFrame, ProcessState, type PruningPolicy, type PutOptions, type ReconcileContext, type ReconcileResult, type ReconcileRunnerConfig, type ReconciliationController, type RecoveryPlan, type RedactionRule, Result, type ScheduleId, type ScheduleStore, type ScheduledTask, type SchedulerConfig, type SchedulerEvent, type SchedulerStats, type SessionCheckpoint, type SessionFilter, SessionId, type SessionPersistence, type SessionRecord, SkillComponent, type SkippedRecoveryEntry, type SnapshotChainStore, type SnapshotNode, type TaskFilter, type TaskId, type TaskOptions, type TaskScheduler, type TaskStatus, type TaskStore, Tool, ToolCallId, type TraceEvent, type TraceEventKind, type TransitionContext, type TurnTrace, type ValidationDiagnostic, type ValidationResult, chainId, conflict, external, internal, isProcessState, nodeId, notFound, permission, rateLimit, scheduleId, staleRef, taskId, timeout, validateNonEmpty, validation };
"
`;

exports[`@koi/core API surface ./config has stable type surface 1`] = `
"/**
 * Configuration contracts — system-level config types and reactive store interface.
 *
 * KoiConfig defines the shape of system-wide runtime policy.
 * ConfigStore<T> provides a reactive get/subscribe interface for hot-reload.
 */
type LogLevel = "debug" | "info" | "warn" | "error" | "silent";
interface FeatureFlags {
    readonly [key: string]: boolean | undefined;
}
interface TelemetryConfig {
    readonly enabled: boolean;
    readonly endpoint?: string | undefined;
    readonly sampleRate?: number | undefined;
}
interface LimitsConfig {
    readonly maxTurns: number;
    readonly maxDurationMs: number;
    readonly maxTokens: number;
}
interface LoopDetectionConfigSection {
    readonly enabled: boolean;
    readonly windowSize: number;
    readonly threshold: number;
    readonly warningThreshold?: number | undefined;
}
interface SpawnConfig {
    readonly maxDepth: number;
    readonly maxFanOut: number;
    readonly maxTotalProcesses: number;
    readonly spawnToolIds?: readonly string[] | undefined;
}
interface ForgeConfigSection {
    readonly enabled: boolean;
    readonly maxForgeDepth: number;
    readonly maxForgesPerSession: number;
    readonly defaultScope: string;
    readonly defaultTrustTier: string;
}
interface ModelRouterConfigSection {
    readonly strategy: string;
    readonly targets: readonly ModelTargetConfigEntry[];
}
interface ModelTargetConfigEntry {
    readonly provider: string;
    readonly model: string;
    readonly weight?: number | undefined;
    readonly enabled?: boolean | undefined;
}
interface KoiConfig {
    readonly logLevel: LogLevel;
    readonly telemetry: TelemetryConfig;
    readonly limits: LimitsConfig;
    readonly loopDetection: LoopDetectionConfigSection;
    readonly spawn: SpawnConfig;
    readonly forge: ForgeConfigSection;
    readonly modelRouter: ModelRouterConfigSection;
    readonly features: FeatureFlags;
}
/** Callback invoked when the config value changes. */
type ConfigListener<T> = (next: T, prev: T) => void;
/** Unsubscribe function returned by subscribe(). */
type ConfigUnsubscribe = () => void;
/**
 * Read-only reactive config store.
 *
 * - \`get()\` is O(1), zero-allocation (returns a cached frozen reference).
 * - \`subscribe()\` fires synchronously on each update.
 */
interface ConfigStore<T> {
    /** Returns the current config snapshot (shallow-frozen). */
    readonly get: () => T;
    /** Subscribes to config changes. Returns an unsubscribe function. */
    readonly subscribe: (listener: ConfigListener<T>) => ConfigUnsubscribe;
}
type ConfigSource = {
    readonly kind: "default";
} | {
    readonly kind: "file";
    readonly filePath: string;
} | {
    readonly kind: "env";
    readonly variable: string;
} | {
    readonly kind: "override";
};

export type { ConfigListener, ConfigSource, ConfigStore, ConfigUnsubscribe, FeatureFlags, ForgeConfigSection, KoiConfig, LimitsConfig, LogLevel, LoopDetectionConfigSection, ModelRouterConfigSection, ModelTargetConfigEntry, SpawnConfig, TelemetryConfig };
"
`;

exports[`@koi/core API surface ./assembly has stable type surface 1`] = `
"import './common.js';
export { A as AgentManifest, C as ChannelConfig, a as ChannelIdentity, M as MiddlewareConfig, l as ModelConfig, P as PermissionConfig, T as ToolConfig } from './assembly-Bp5WuiM8.js';
import './webhook.js';
"
`;

exports[`@koi/core API surface ./channel has stable type surface 1`] = `
"import { JsonObject } from './common.js';
import { OutboundMessage, InboundMessage } from './message.js';

/**
 * Channel adapter contract — I/O interface to users.
 */

interface ChannelCapabilities {
    readonly text: boolean;
    readonly images: boolean;
    readonly files: boolean;
    readonly buttons: boolean;
    readonly audio: boolean;
    readonly video: boolean;
    readonly threads: boolean;
}
type MessageHandler = (message: InboundMessage) => Promise<void>;
type ChannelStatusKind = "processing" | "idle" | "error";
interface ChannelStatus {
    readonly kind: ChannelStatusKind;
    readonly turnIndex: number;
    /** Correlates to the inbound message that triggered this turn. */
    readonly messageRef?: string;
    /** Human-readable hint for rich UIs: "thinking", "calling search", etc. */
    readonly detail?: string;
    readonly metadata?: JsonObject;
}
interface ChannelAdapter {
    readonly name: string;
    readonly capabilities: ChannelCapabilities;
    readonly connect: () => Promise<void>;
    readonly disconnect: () => Promise<void>;
    readonly send: (message: OutboundMessage) => Promise<void>;
    readonly onMessage: (handler: MessageHandler) => () => void;
    readonly sendStatus?: (status: ChannelStatus) => Promise<void>;
}

export type { ChannelAdapter, ChannelCapabilities, ChannelStatus, ChannelStatusKind, MessageHandler };
"
`;

exports[`@koi/core API surface ./common has stable type surface 1`] = `
"/**
 * Shared type aliases used across all contracts.
 */
type JsonObject = Readonly<Record<string, unknown>>;

export type { JsonObject };
"
`;

exports[`@koi/core API surface ./context has stable type surface 1`] = `
"import { InboundMessage } from './message.js';
import './common.js';

/**
 * Token estimation and context compaction contracts.
 *
 * Both interfaces support sync/async implementations via \`T | Promise<T>\`:
 * local tokenizers (tiktoken, heuristic) run sync; remote APIs run async.
 */

/**
 * Estimate token counts for text and message sequences.
 *
 * The optional \`model\` parameter acts as a tokenizer dispatch key —
 * a single estimator instance may handle different models across turns.
 */
interface TokenEstimator {
    readonly estimateText: (text: string, model?: string) => number | Promise<number>;
    readonly estimateMessages: (messages: readonly InboundMessage[], model?: string) => number | Promise<number>;
}
/**
 * Outcome of a compaction pass, carrying observability metadata.
 *
 * \`strategy\` is an open string — L2 packages invent new strategies freely.
 */
interface CompactionResult {
    readonly messages: readonly InboundMessage[];
    readonly originalTokens: number;
    readonly compactedTokens: number;
    readonly strategy: string;
}
/**
 * Reduce a message sequence to fit within a token budget.
 *
 * Always succeeds — worst case returns an empty message array.
 * If the underlying LLM summarizer breaks, throw with \`cause\`.
 */
interface ContextCompactor {
    readonly compact: (messages: readonly InboundMessage[], maxTokens: number, model?: string) => CompactionResult | Promise<CompactionResult>;
}

export type { CompactionResult, ContextCompactor, TokenEstimator };
"
`;

exports[`@koi/core API surface ./delegation has stable type surface 1`] = `
"export { b as CircuitBreakerConfig, D as DEFAULT_CIRCUIT_BREAKER_CONFIG, c as DelegationComponent, d as DelegationConfig, e as DelegationDenyReason, f as DelegationEvent, g as DelegationGrant, h as DelegationId, i as DelegationManagerConfig, j as DelegationScope, k as DelegationVerifyResult, R as RevocationRegistry, S as ScopeChecker, m as delegationId } from './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
"
`;

exports[`@koi/core API surface ./ecs has stable type surface 1`] = `
"import './assembly-Bp5WuiM8.js';
export { b as Agent, a as AgentDescriptor, A as AgentId, B as BROWSER, I as COMPONENT_PRIORITY, J as CREDENTIALS, K as ChildHandle, L as ChildLifecycleEvent, M as ComponentEvent, N as ComponentEventKind, O as ComponentProvider, Q as CredentialComponent, R as DELEGATION, U as EVENTS, V as EventComponent, W as FILESYSTEM, X as GOVERNANCE, Y as GovernanceComponent, Z as GovernanceUsage, _ as MEMORY, $ as MemoryComponent, a0 as MemoryResult, a1 as ProcessAccounter, a2 as ProcessId, P as ProcessState, a3 as RunId, c as SessionId, S as SkillComponent, a4 as SkillMetadata, a5 as SpawnCheck, a6 as SpawnLedger, a7 as SubsystemToken, T as Tool, d as ToolCallId, a8 as ToolDescriptor, a9 as TrustTier, aa as TurnId, ab as agentId, ac as agentToken, ad as channelToken, ae as middlewareToken, af as runId, ag as sessionId, ah as skillToken, ai as token, aj as toolCallId, ak as toolToken, al as turnId } from './ecs-Buyeyz14.js';
import './channel.js';
import './common.js';
import './filesystem-backend.js';
import './webhook.js';
import './errors.js';
import './message.js';
"
`;

exports[`@koi/core API surface ./engine has stable type surface 1`] = `
"import './common.js';
export { A as AbortReason, C as ComposedCallHandlers, c as EngineAdapter, d as EngineEvent, a as EngineInput, e as EngineInputBase, f as EngineMetrics, g as EngineOutput, E as EngineState, h as EngineStopReason } from './engine-Cs5G9xiO.js';
import './ecs-Buyeyz14.js';
import './message.js';
import './middleware.js';
import './assembly-Bp5WuiM8.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './filesystem-backend.js';
"
`;

exports[`@koi/core API surface ./event-backend has stable type surface 1`] = `
"import { Result, KoiError } from './errors.js';
import './common.js';

/**
 * Event backend contract — L0 types for durable event infrastructure.
 *
 * Defines the pluggable event backend with real-time subscriptions,
 * event replay from checkpoint, and dead letter queue for failed deliveries.
 *
 * Stream-based model: events belong to named streams (e.g., "agent:<id>"),
 * each with its own monotonically increasing sequence numbers.
 */

interface EventEnvelope {
    /** Globally unique, time-sortable event ID (ULID). */
    readonly id: string;
    /** Stream this event belongs to (e.g., "agent:<id>", "brick:<id>"). */
    readonly streamId: string;
    /** Event type discriminator (e.g., "agent:state_changed"). */
    readonly type: string;
    /** Unix timestamp ms when the event was appended. */
    readonly timestamp: number;
    /** Per-stream position — 1-based, monotonically increasing. May have gaps after FIFO eviction. */
    readonly sequence: number;
    /** Event payload. */
    readonly data: unknown;
    /** Optional structured metadata (e.g., correlationId, causationId). */
    readonly metadata?: Readonly<Record<string, unknown>> | undefined;
}
interface EventInput {
    /** Event type discriminator. */
    readonly type: string;
    /** Event payload. */
    readonly data: unknown;
    /** Optional structured metadata. */
    readonly metadata?: Readonly<Record<string, unknown>> | undefined;
}
interface ReadOptions {
    /** Inclusive start sequence (default: 1). */
    readonly fromSequence?: number | undefined;
    /** Exclusive end sequence. */
    readonly toSequence?: number | undefined;
    /** Maximum events to return. */
    readonly limit?: number | undefined;
    /** Read direction (default: "forward"). */
    readonly direction?: "forward" | "backward" | undefined;
    /** Filter by event types. Only events matching one of these types are returned. */
    readonly types?: readonly string[] | undefined;
}
interface ReadResult {
    /** Events matching the read options. */
    readonly events: readonly EventEnvelope[];
    /** True if more events exist beyond the returned batch. */
    readonly hasMore: boolean;
}
interface SubscribeOptions {
    /** Stream to subscribe to. */
    readonly streamId: string;
    /** Durable subscription name — position tracked by this name. */
    readonly subscriptionName: string;
    /** Resume from this sequence (default: latest — only new events). */
    readonly fromPosition?: number | undefined;
    /** Handler called for each event. Throw to trigger retry + DLQ. */
    readonly handler: (event: EventEnvelope) => void | Promise<void>;
    /** Max delivery attempts before dead-lettering (default: 3). */
    readonly maxRetries?: number | undefined;
    /** Called when an event is dead-lettered. */
    readonly onDeadLetter?: ((entry: DeadLetterEntry) => void) | undefined;
    /** Filter by event types. Only events matching one of these types are delivered. */
    readonly types?: readonly string[] | undefined;
}
interface SubscriptionHandle {
    /** The durable subscription name. */
    readonly subscriptionName: string;
    /** The stream being subscribed to. */
    readonly streamId: string;
    /** Stop receiving events. */
    readonly unsubscribe: () => void;
    /** Current cursor position (last successfully processed sequence). */
    readonly position: () => number;
}
interface DeadLetterEntry {
    /** Unique DLQ entry ID. */
    readonly id: string;
    /** The event that failed delivery. */
    readonly event: EventEnvelope;
    /** Subscription that failed to process this event. */
    readonly subscriptionName: string;
    /** Error message from the last failed attempt. */
    readonly error: string;
    /** Total delivery attempts before dead-lettering. */
    readonly attempts: number;
    /** Unix timestamp ms when the event was dead-lettered. */
    readonly deadLetteredAt: number;
}
interface DeadLetterFilter {
    /** Filter by stream. */
    readonly streamId?: string | undefined;
    /** Filter by subscription name. */
    readonly subscriptionName?: string | undefined;
    /** Maximum entries to return. */
    readonly limit?: number | undefined;
}
interface EventBackendConfig {
    /** Max events per stream before FIFO eviction (default: 10_000). */
    readonly maxEventsPerStream?: number | undefined;
    /** Time-to-live for events in ms. Expired events are excluded from reads. */
    readonly eventTtlMs?: number | undefined;
}
/**
 * Pluggable event backend with persistence, replay, subscriptions, and DLQ.
 *
 * All fallible operations return \`Result<T, KoiError>\`.
 * All methods return \`T | Promise<T>\` — in-memory implementations are sync,
 * database/network implementations are async. Callers must always \`await\`.
 */
interface EventBackend {
    /** Append an event to a stream. Returns the full envelope with assigned id + sequence. */
    readonly append: (streamId: string, event: EventInput) => Result<EventEnvelope, KoiError> | Promise<Result<EventEnvelope, KoiError>>;
    /** Read events from a stream (batch, paginated). */
    readonly read: (streamId: string, options?: ReadOptions) => Result<ReadResult, KoiError> | Promise<Result<ReadResult, KoiError>>;
    /** Subscribe to a stream for real-time delivery with durable position tracking. */
    readonly subscribe: (options: SubscribeOptions) => SubscriptionHandle | Promise<SubscriptionHandle>;
    /** Query dead-lettered events. */
    readonly queryDeadLetters: (filter?: DeadLetterFilter) => Result<readonly DeadLetterEntry[], KoiError> | Promise<Result<readonly DeadLetterEntry[], KoiError>>;
    /** Retry a dead-lettered event (re-deliver to its subscription handler). */
    readonly retryDeadLetter: (entryId: string) => Result<boolean, KoiError> | Promise<Result<boolean, KoiError>>;
    /** Purge dead-lettered entries matching an optional filter. */
    readonly purgeDeadLetters: (filter?: DeadLetterFilter) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Return the number of (non-expired) events in a stream. */
    readonly streamLength: (streamId: string) => number | Promise<number>;
    /** Return the lowest available sequence in a stream (0 if empty). Useful after FIFO eviction or TTL expiry. */
    readonly firstSequence: (streamId: string) => number | Promise<number>;
    /** Close the backend and release resources. */
    readonly close: () => void | Promise<void>;
}

export type { DeadLetterEntry, DeadLetterFilter, EventBackend, EventBackendConfig, EventEnvelope, EventInput, ReadOptions, ReadResult, SubscribeOptions, SubscriptionHandle };
"
`;

exports[`@koi/core API surface ./errors has stable type surface 1`] = `
"import { JsonObject } from './common.js';

/**
 * Error types, Result discriminated union, and retry defaults.
 *
 * ## Exhaustive error code handling
 *
 * Use the \`never\` pattern to ensure all codes are handled:
 *
 * \`\`\`typescript
 * function handle(code: KoiErrorCode): string {
 *   switch (code) {
 *     case "VALIDATION": return "bad input";
 *     case "NOT_FOUND":  return "missing";
 *     // ... all 9 codes ...
 *     default: {
 *       const _exhaustive: never = code;
 *       throw new Error(\`Unhandled code: \${String(_exhaustive)}\`);
 *     }
 *   }
 * }
 * \`\`\`
 */

type KoiErrorCode = "VALIDATION" | "NOT_FOUND" | "PERMISSION" | "CONFLICT" | "RATE_LIMIT" | "TIMEOUT" | "EXTERNAL" | "INTERNAL"
/**
 * A cached reference (browser element ref, DB cursor, WebSocket token, etc.)
 * has become invalid because the underlying resource changed or was replaced.
 * The caller must re-acquire a fresh reference before retrying the operation.
 *
 * Distinct from NOT_FOUND (which means the resource never existed or was
 * permanently deleted). STALE_REF means the resource likely still exists
 * but the handle pointing to it is no longer valid.
 *
 * Common browser automation pattern: call browser_snapshot to obtain fresh
 * [ref=eN] markers, then retry the action with the new ref.
 */
 | "STALE_REF";
interface KoiError {
    readonly code: KoiErrorCode;
    readonly message: string;
    readonly cause?: unknown;
    readonly retryable: boolean;
    /** Structured metadata for programmatic handling (e.g., resourceId, limit). */
    readonly context?: JsonObject;
    /** Hint for retry middleware — non-negative milliseconds to wait before retrying. */
    readonly retryAfterMs?: number;
}
/**
 * Default retryability per error code. Derived from the architecture doc's
 * error taxonomy. EXTERNAL defaults to \`false\` — callers should override
 * based on the specific external failure.
 */
declare const RETRYABLE_DEFAULTS: Readonly<Record<KoiErrorCode, boolean>>;
type Result<T, E = KoiError> = {
    readonly ok: true;
    readonly value: T;
} | {
    readonly ok: false;
    readonly error: E;
};
/**
 * Standard signature for backend error mappers.
 * Each L2 backend adapter should export a function matching this shape.
 */
type BackendErrorMapper = (error: unknown, context: string) => KoiError;

export { type BackendErrorMapper, type KoiError, type KoiErrorCode, RETRYABLE_DEFAULTS, type Result };
"
`;

exports[`@koi/core API surface ./message has stable type surface 1`] = `
"import { JsonObject } from './common.js';

/**
 * Content block union and message types.
 */

interface TextBlock {
    readonly kind: "text";
    readonly text: string;
}
interface FileBlock {
    readonly kind: "file";
    readonly url: string;
    readonly mimeType: string;
    readonly name?: string;
}
interface ImageBlock {
    readonly kind: "image";
    readonly url: string;
    readonly alt?: string;
}
interface ButtonBlock {
    readonly kind: "button";
    readonly label: string;
    readonly action: string;
    readonly payload?: unknown;
}
interface CustomBlock {
    readonly kind: "custom";
    readonly type: string;
    readonly data: unknown;
}
type ContentBlock = TextBlock | FileBlock | ImageBlock | ButtonBlock | CustomBlock;
interface OutboundMessage {
    readonly content: readonly ContentBlock[];
    readonly threadId?: string;
    readonly metadata?: JsonObject;
}
interface InboundMessage {
    readonly content: readonly ContentBlock[];
    readonly senderId: string;
    readonly threadId?: string;
    readonly timestamp: number;
    readonly metadata?: JsonObject;
}

export type { ButtonBlock, ContentBlock, CustomBlock, FileBlock, ImageBlock, InboundMessage, OutboundMessage, TextBlock };
"
`;

exports[`@koi/core API surface ./middleware has stable type surface 1`] = `
"import { ChannelStatus } from './channel.js';
import { JsonObject } from './common.js';
import { a8 as ToolDescriptor, d as ToolCallId, c as SessionId, a3 as RunId, aa as TurnId } from './ecs-Buyeyz14.js';
import { InboundMessage } from './message.js';
import './assembly-Bp5WuiM8.js';
import './webhook.js';
import './errors.js';
import './filesystem-backend.js';

/**
 * Middleware contract — sole interposition layer for model/tool calls.
 */

interface SessionContext {
    readonly agentId: string;
    readonly sessionId: SessionId;
    readonly runId: RunId;
    /** Authenticated user identity. Injected by L1 when provided in CreateKoiOptions. */
    readonly userId?: string;
    /** Injected by L1 at session start — package name of the active channel adapter (e.g. "@koi/channel-telegram"). */
    readonly channelId?: string;
    readonly metadata: JsonObject;
}
interface TurnContext {
    readonly session: SessionContext;
    readonly turnIndex: number;
    readonly turnId: TurnId;
    readonly messages: readonly InboundMessage[];
    readonly metadata: JsonObject;
    readonly signal?: AbortSignal | undefined;
    readonly requestApproval?: ApprovalHandler;
    /** Optional callback to notify channels of turn status. Injected by L1 if configured. */
    readonly sendStatus?: (status: ChannelStatus) => Promise<void>;
}
interface ModelRequest {
    readonly messages: readonly InboundMessage[];
    readonly model?: string;
    readonly temperature?: number;
    readonly maxTokens?: number;
    readonly metadata?: JsonObject;
    /** Propagated abort signal — adapters should compose with their own timeout. */
    readonly signal?: AbortSignal | undefined;
    /** Tool descriptors available for this call. Injected by L1; middleware may filter. */
    readonly tools?: readonly ToolDescriptor[];
}
interface ModelResponse {
    readonly content: string;
    readonly model: string;
    readonly usage?: {
        readonly inputTokens: number;
        readonly outputTokens: number;
    };
    readonly metadata?: JsonObject;
}
type ModelHandler = (request: ModelRequest) => Promise<ModelResponse>;
type ModelChunk = {
    readonly kind: "text_delta";
    readonly delta: string;
} | {
    readonly kind: "thinking_delta";
    readonly delta: string;
} | {
    readonly kind: "tool_call_start";
    readonly toolName: string;
    readonly callId: ToolCallId;
} | {
    readonly kind: "tool_call_delta";
    readonly callId: ToolCallId;
    readonly delta: string;
} | {
    readonly kind: "tool_call_end";
    readonly callId: ToolCallId;
} | {
    readonly kind: "usage";
    readonly inputTokens: number;
    readonly outputTokens: number;
} | {
    readonly kind: "done";
    readonly response: ModelResponse;
};
type ModelStreamHandler = (request: ModelRequest) => AsyncIterable<ModelChunk>;
interface ToolRequest {
    readonly toolId: string;
    readonly input: JsonObject;
    readonly metadata?: JsonObject;
}
interface ToolResponse {
    readonly output: unknown;
    readonly metadata?: JsonObject;
}
type ToolHandler = (request: ToolRequest) => Promise<ToolResponse>;
interface ApprovalRequest {
    readonly toolId: string;
    readonly input: JsonObject;
    readonly reason: string;
    readonly metadata?: JsonObject;
}
type ApprovalDecision = {
    readonly kind: "allow";
} | {
    readonly kind: "modify";
    readonly updatedInput: JsonObject;
} | {
    readonly kind: "deny";
    readonly reason: string;
};
type ApprovalHandler = (request: ApprovalRequest) => Promise<ApprovalDecision>;
interface KoiMiddleware {
    readonly name: string;
    /** Middleware execution priority. Lower = outer onion layer (runs first). Default: 500. */
    readonly priority?: number;
    /** Called once when an agent session begins. */
    readonly onSessionStart?: (ctx: SessionContext) => Promise<void>;
    /** Called once when an agent session ends. */
    readonly onSessionEnd?: (ctx: SessionContext) => Promise<void>;
    /** Called before each turn's model call. */
    readonly onBeforeTurn?: (ctx: TurnContext) => Promise<void>;
    /** Called after each turn completes. */
    readonly onAfterTurn?: (ctx: TurnContext) => Promise<void>;
    /** Onion wrapper for model calls. Call \`next(req)\` to continue the chain. */
    readonly wrapModelCall?: (ctx: TurnContext, request: ModelRequest, next: ModelHandler) => Promise<ModelResponse>;
    /** Onion wrapper for model streams. Call \`next(req)\` to continue the chain. */
    readonly wrapModelStream?: (ctx: TurnContext, request: ModelRequest, next: ModelStreamHandler) => AsyncIterable<ModelChunk>;
    /** Onion wrapper for tool calls. Call \`next(req)\` to continue the chain. */
    readonly wrapToolCall?: (ctx: TurnContext, request: ToolRequest, next: ToolHandler) => Promise<ToolResponse>;
}

export type { ApprovalDecision, ApprovalHandler, ApprovalRequest, KoiMiddleware, ModelChunk, ModelHandler, ModelRequest, ModelResponse, ModelStreamHandler, SessionContext, ToolHandler, ToolRequest, ToolResponse, TurnContext };
"
`;

exports[`@koi/core API surface ./eviction has stable type surface 1`] = `
"import { A as AgentId, P as ProcessState } from './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Eviction policy contract — candidate selection for agent eviction.
 *
 * The EvictionPolicy interface defines a pluggable strategy for selecting
 * which agents to evict when resources are constrained. Implementations
 * (LRU, QoS-aware) are L2 packages.
 */

/** An agent eligible for eviction, with metadata for policy decisions. */
interface EvictionCandidate {
    readonly agentId: AgentId;
    readonly phase: ProcessState;
    /** Unix timestamp ms of the last heartbeat. */
    readonly lastHeartbeat: number;
    /** Eviction priority — lower values are evicted first. */
    readonly priority: number;
    readonly metadata: Readonly<Record<string, unknown>>;
}
/** Why eviction was triggered. */
type EvictionReason = "idle_timeout" | "memory_pressure" | "preemption" | "manual";
/** Outcome of an eviction cycle. */
interface EvictionResult {
    readonly evicted: readonly AgentId[];
    readonly skipped: number;
    readonly reason: EvictionReason;
}
/**
 * Strategy for selecting which agents to evict. Implementations receive
 * a pre-filtered candidate list and return the selected subset.
 *
 * Built-in implementations (L2):
 * - LRU: oldest heartbeat first
 * - QoS-aware: lowest priority first, then oldest heartbeat
 */
interface EvictionPolicy {
    readonly name: string;
    /** Select up to \`count\` candidates for eviction from the provided list. */
    readonly selectCandidates: (candidates: readonly EvictionCandidate[], count: number) => readonly EvictionCandidate[];
}

export type { EvictionCandidate, EvictionPolicy, EvictionReason, EvictionResult };
"
`;

exports[`@koi/core API surface ./health has stable type surface 1`] = `
"import { A as AgentId } from './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Health monitoring contract — heartbeat recording, staleness detection.
 *
 * Implementations use a two-tier architecture: in-memory buffer for hot
 * writes, periodic flush to the registry for staleness sweeps.
 */

/** Agent health determined by heartbeat recency. */
type HealthStatus = "alive" | "suspect" | "dead";
/** Point-in-time health assessment for a single agent. */
interface HealthSnapshot {
    readonly agentId: AgentId;
    readonly status: HealthStatus;
    /** Unix timestamp ms of the last recorded heartbeat. 0 if never received. */
    readonly lastHeartbeat: number;
    /** Number of consecutive missed health checks. */
    readonly missedChecks: number;
}
/** Operational statistics for the health monitoring system. */
interface HealthMonitorStats {
    /** Total heartbeats recorded since startup. */
    readonly totalRecorded: number;
    /** Total heartbeats flushed to the registry. */
    readonly totalFlushed: number;
    /** Current number of entries in the in-memory buffer. */
    readonly bufferSize: number;
    /** Number of flush cycles completed. */
    readonly flushCount: number;
}
/** Configuration for the health monitoring system. */
interface HealthMonitorConfig {
    /** How often to flush the heartbeat buffer to the registry (ms). Default: 30_000. */
    readonly flushIntervalMs: number;
    /** How often to sweep for stale agents (ms). Default: 10_000. */
    readonly sweepIntervalMs: number;
    /** Time without heartbeat before an agent is considered suspect (ms). Default: 60_000. */
    readonly suspectThresholdMs: number;
    /** Time without heartbeat before an agent is considered dead (ms). Default: 120_000. */
    readonly deadThresholdMs: number;
}
/** Default health monitor configuration. */
declare const DEFAULT_HEALTH_MONITOR_CONFIG: HealthMonitorConfig;
/**
 * Pluggable health monitoring interface. Tracks agent heartbeats
 * and detects staleness.
 *
 * \`record()\` is synchronous (hot path — writes to in-memory buffer).
 * \`check()\` returns \`T | Promise<T>\` for async-ready implementations.
 */
interface HealthMonitor extends AsyncDisposable {
    /** Record a heartbeat for an agent. Hot path — always synchronous. */
    readonly record: (agentId: AgentId) => void;
    /** Check the current health of an agent. May involve I/O. */
    readonly check: (agentId: AgentId) => HealthSnapshot | Promise<HealthSnapshot>;
    /** Return current buffer and flush statistics. */
    readonly stats: () => HealthMonitorStats;
}

export { DEFAULT_HEALTH_MONITOR_CONFIG, type HealthMonitor, type HealthMonitorConfig, type HealthMonitorStats, type HealthSnapshot, type HealthStatus };
"
`;

exports[`@koi/core API surface ./lifecycle has stable type surface 1`] = `
"import { A as AgentId, P as ProcessState } from './ecs-Buyeyz14.js';
import { Result, KoiError } from './errors.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Agent lifecycle contract — registration, state transitions, and monitoring.
 *
 * The 7th core contract alongside Middleware, Message, Channel, Resolver,
 * Assembly, and Engine. Defines the pluggable AgentRegistry interface for
 * agent lifecycle management.
 *
 * Exception: VALID_TRANSITIONS is a pure readonly data constant derived from
 * L0 type definitions, codifying architecture-doc invariants with zero logic.
 */

/**
 * Fine-grained conditions layered beneath ProcessState.
 * Multiple conditions can be active simultaneously.
 */
type AgentCondition = "Initialized" | "Ready" | "Healthy" | "Draining";
/**
 * Discriminated union describing why a state transition occurred.
 * Used for audit trails and debugging.
 */
type TransitionReason = {
    readonly kind: "assembly_complete";
} | {
    readonly kind: "awaiting_response";
} | {
    readonly kind: "response_received";
} | {
    readonly kind: "hitl_pause";
} | {
    readonly kind: "budget_exceeded";
} | {
    readonly kind: "governance_block";
} | {
    readonly kind: "human_approval";
} | {
    readonly kind: "budget_replenished";
} | {
    readonly kind: "completed";
} | {
    readonly kind: "error";
    readonly cause?: unknown;
} | {
    readonly kind: "iteration_limit";
} | {
    readonly kind: "timeout";
} | {
    readonly kind: "evicted";
} | {
    readonly kind: "stale";
};
/**
 * Allowed state transitions per Koi architecture doc.
 * L1 engine runtime uses this to validate transitions.
 * L2 packages can import this to check transitions without importing L1.
 *
 * Transitions:
 *   created → running, terminated
 *   running → waiting, suspended, terminated
 *   waiting → running, suspended, terminated
 *   suspended → running, terminated
 *   terminated → (none)
 */
declare const VALID_TRANSITIONS: Readonly<Record<ProcessState, readonly ProcessState[]>>;
/**
 * Rich agent status combining phase, generation counter (CAS),
 * sub-conditions, and transition metadata.
 */
interface AgentStatus {
    readonly phase: ProcessState;
    /** CAS generation counter. Increments on each state transition. */
    readonly generation: number;
    /** Active conditions — multiple can be true simultaneously. */
    readonly conditions: readonly AgentCondition[];
    /** Why the last transition occurred. */
    readonly reason?: TransitionReason;
    /** Unix timestamp ms of the last state transition. */
    readonly lastTransitionAt: number;
}
/** A registered agent in the lifecycle registry. */
interface RegistryEntry {
    readonly agentId: AgentId;
    readonly status: AgentStatus;
    readonly agentType: "copilot" | "worker";
    readonly metadata: Readonly<Record<string, unknown>>;
    /** Unix timestamp ms when the agent was registered. */
    readonly registeredAt: number;
    /** Parent agent ID (undefined for root agents). */
    readonly parentId?: AgentId;
}
/** Events emitted by the registry on state changes. */
type RegistryEvent = {
    readonly kind: "registered";
    readonly entry: RegistryEntry;
} | {
    readonly kind: "deregistered";
    readonly agentId: AgentId;
} | {
    readonly kind: "transitioned";
    readonly agentId: AgentId;
    readonly from: ProcessState;
    readonly to: ProcessState;
    readonly generation: number;
};
/** Filter criteria for listing registered agents. */
interface RegistryFilter {
    readonly phase?: ProcessState;
    readonly agentType?: "copilot" | "worker";
    readonly condition?: AgentCondition;
    /** Filter by parent agent ID. */
    readonly parentId?: AgentId;
}
/**
 * Pluggable agent lifecycle registry. Manages registration, state transitions
 * (with CAS via generation counter), and change notification.
 *
 * All methods return \`T | Promise<T>\` — in-memory implementations are sync,
 * network-backed implementations (e.g., Nexus) are async.
 */
interface AgentRegistry extends AsyncDisposable {
    /** Register a new agent. Returns the stored entry. */
    readonly register: (entry: RegistryEntry) => RegistryEntry | Promise<RegistryEntry>;
    /** Remove an agent from the registry. Returns true if found. */
    readonly deregister: (agentId: AgentId) => boolean | Promise<boolean>;
    /** Look up an agent by ID. Returns undefined if not found. */
    readonly lookup: (agentId: AgentId) => RegistryEntry | undefined | Promise<RegistryEntry | undefined>;
    /** List agents matching an optional filter. */
    readonly list: (filter?: RegistryFilter) => readonly RegistryEntry[] | Promise<readonly RegistryEntry[]>;
    /**
     * CAS state transition. Only succeeds if the current generation matches
     * \`expectedGeneration\`. Returns the updated entry on success, or a
     * CONFLICT/VALIDATION error on failure.
     */
    readonly transition: (agentId: AgentId, targetPhase: ProcessState, expectedGeneration: number, reason: TransitionReason) => Result<RegistryEntry, KoiError> | Promise<Result<RegistryEntry, KoiError>>;
    /** Subscribe to registry change events. Returns unsubscribe function. */
    readonly watch: (listener: (event: RegistryEvent) => void) => () => void;
}

export { type AgentCondition, type AgentRegistry, type AgentStatus, type RegistryEntry, type RegistryEvent, type RegistryFilter, type TransitionReason, VALID_TRANSITIONS };
"
`;

exports[`@koi/core API surface ./model-provider has stable type surface 1`] = `
"/**
 * Model provider types for routing and capability matching.
 *
 * These thin types live in L0 so that L2 packages (model-router, engine adapters)
 * can share a common vocabulary for providers without importing each other.
 */
/**
 * Feature flags for model capability matching.
 *
 * Used by the model router to validate that a target model supports
 * the features required by a given request (e.g., vision, function calling).
 */
interface ModelCapabilities {
    readonly streaming: boolean;
    readonly functionCalling: boolean;
    readonly vision: boolean;
    readonly jsonMode: boolean;
    readonly maxContextTokens: number;
    readonly maxOutputTokens: number;
}
/**
 * Identifies a model provider for routing and capability matching.
 *
 * A provider represents a single LLM API endpoint (e.g., OpenAI, Anthropic).
 * The model router uses this to select and validate routing targets.
 */
interface ModelProvider {
    readonly id: string;
    readonly name: string;
    readonly capabilities: ModelCapabilities;
}
/**
 * A routing target: provider + model + weight.
 *
 * Used in routing configuration to define the ordered list of
 * provider/model combinations the router can dispatch to.
 */
interface ModelTarget {
    readonly provider: string;
    readonly model: string;
    /** Routing weight between 0 and 1. Default: 1. */
    readonly weight?: number;
    /** Whether this target is active. Default: true. */
    readonly enabled?: boolean;
}

export type { ModelCapabilities, ModelProvider, ModelTarget };
"
`;

exports[`@koi/core API surface ./resolver has stable type surface 1`] = `
"import { Result, KoiError } from './errors.js';
import './common.js';

/**
 * Resolver contract — discovery of tools/skills/agents.
 */

type SourceLanguage = "typescript" | "javascript" | "markdown" | "yaml" | "json";
interface SourceBundle {
    readonly content: string;
    readonly language: SourceLanguage;
    readonly files?: Readonly<Record<string, string>>;
}
interface Resolver<TMeta, TFull> {
    readonly discover: () => Promise<readonly TMeta[]>;
    readonly load: (id: string) => Promise<Result<TFull, KoiError>>;
    readonly onChange?: (listener: () => void) => () => void;
    readonly source?: (id: string) => Promise<Result<SourceBundle, KoiError>>;
}

export type { Resolver, SourceBundle, SourceLanguage };
"
`;

exports[`@koi/core API surface ./brick-snapshot has stable type surface 1`] = `
"import './errors.js';
export { b as BrickId, B as BrickRef, d as BrickSnapshot, e as BrickSource, S as SnapshotEvent, f as SnapshotId, g as SnapshotQuery, h as SnapshotStore, i as brickId, s as snapshotId } from './brick-snapshot-DTdsYtdz.js';
import './common.js';
import './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './webhook.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';
"
`;

exports[`@koi/core API surface ./brick-store has stable type surface 1`] = `
"import './brick-snapshot-DTdsYtdz.js';
import './ecs-Buyeyz14.js';
import './errors.js';
export { A as AdvisoryLock, a as AgentArtifact, B as BrickArtifact, b as BrickArtifactBase, c as BrickRequires, d as BrickUpdate, h as ForgeQuery, l as ForgeStore, I as ImplementationArtifact, L as LockHandle, n as LockMode, o as LockRequest, p as SkillArtifact, q as StoreChangeEvent, r as StoreChangeKind, s as StoreChangeNotifier, T as TestCase, t as ToolArtifact } from './brick-store-wnveACXa.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';
"
`;

exports[`@koi/core API surface ./sandbox-adapter has stable type surface 1`] = `
"import { SandboxProfile } from './sandbox-profile.js';
import './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Sandbox adapter contract — pluggable sandbox backends for isolated execution.
 *
 * Defines the extension point for sandbox providers (OS-level, cloud, WASM).
 * Each backend implements SandboxAdapter to create SandboxInstance environments.
 *
 * Note: These types describe OS/container-level process execution (exitCode, stdout, stderr).
 * The SandboxResult in sandbox-executor.ts describes code-level return values (output, durationMs).
 */

/** Options for executing a command inside a sandbox instance. */
interface SandboxExecOptions {
    readonly cwd?: string;
    readonly env?: Readonly<Record<string, string>>;
    readonly stdin?: string;
    readonly timeoutMs?: number;
    /** Streaming callback for stdout chunks. */
    readonly onStdout?: (chunk: string) => void;
    /** Streaming callback for stderr chunks. */
    readonly onStderr?: (chunk: string) => void;
    /** Maximum bytes to capture for stdout+stderr. Default: 10 MB. */
    readonly maxOutputBytes?: number;
}
/** Result of a completed sandboxed execution (process-level). */
interface SandboxAdapterResult {
    readonly exitCode: number;
    readonly stdout: string;
    readonly stderr: string;
    readonly signal?: string;
    readonly durationMs: number;
    readonly timedOut: boolean;
    readonly oomKilled: boolean;
    /** Whether stdout or stderr was truncated due to maxOutputBytes. */
    readonly truncated?: boolean;
}
/**
 * A running sandbox environment. Stateful — must be destroyed when done.
 *
 * For OS-level backends, the instance wraps per-command process isolation.
 * For cloud backends, the instance represents a live microVM or container.
 */
interface SandboxInstance {
    readonly exec: (command: string, args: readonly string[], options?: SandboxExecOptions) => Promise<SandboxAdapterResult>;
    readonly readFile: (path: string) => Promise<Uint8Array>;
    readonly writeFile: (path: string, content: Uint8Array) => Promise<void>;
    readonly destroy: () => Promise<void>;
}
/**
 * Backend that creates sandbox instances from a profile.
 *
 * Each backend (OS-level, E2B, Vercel, Cloudflare, Daytona, K8s)
 * implements this contract as an independent L2 package.
 */
interface SandboxAdapter {
    readonly name: string;
    readonly create: (profile: SandboxProfile) => Promise<SandboxInstance>;
}

export type { SandboxAdapter, SandboxAdapterResult, SandboxExecOptions, SandboxInstance };
"
`;

exports[`@koi/core API surface ./sandbox-executor has stable type surface 1`] = `
"import { a9 as TrustTier } from './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Sandbox executor contract — injected dependency for code execution in isolation.
 *
 * Used by @koi/forge (verification pipeline) and @koi/sandbox-ipc (IPC bridge).
 * The executor runs arbitrary code in an OS-level sandbox and returns a typed result.
 *
 * Note: @koi/sandbox (L2) also defines a \`SandboxResult\` for OS process output
 * (exitCode, stdout, stderr). These are different types serving different purposes.
 * This module's \`SandboxResult\` represents the return value of executed code.
 */
type SandboxErrorCode = "TIMEOUT" | "OOM" | "PERMISSION" | "CRASH";
interface SandboxError {
    readonly code: SandboxErrorCode;
    readonly message: string;
    readonly durationMs: number;
}
interface SandboxResult {
    readonly output: unknown;
    readonly durationMs: number;
    readonly memoryUsedBytes?: number;
}
interface SandboxExecutor {
    readonly execute: (code: string, input: unknown, timeoutMs: number) => Promise<{
        readonly ok: true;
        readonly value: SandboxResult;
    } | {
        readonly ok: false;
        readonly error: SandboxError;
    }>;
}

/**
 * Result of resolving a trust tier to a concrete executor.
 * Includes observability metadata: which tier was requested,
 * which tier actually resolved, and whether fallback was applied.
 */
interface TierResolution {
    readonly executor: SandboxExecutor;
    readonly requestedTier: TrustTier;
    readonly resolvedTier: TrustTier;
    readonly fallback: boolean;
}
/**
 * Trust-tier-aware dispatcher — routes \`execute()\` calls to per-tier backends.
 * Used by @koi/forge to dispatch bricks to the correct execution environment.
 */
interface TieredSandboxExecutor {
    readonly forTier: (tier: TrustTier) => TierResolution;
}

export type { SandboxError, SandboxErrorCode, SandboxExecutor, SandboxResult, TierResolution, TieredSandboxExecutor };
"
`;

exports[`@koi/core API surface ./sandbox-profile has stable type surface 1`] = `
"import { a9 as TrustTier } from './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './errors.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Sandbox profile contract — platform-agnostic isolation policy.
 *
 * Defines what a sandboxed process is allowed to do: filesystem access,
 * network access, and resource limits. Used by @koi/sandbox (OS-level)
 * and @koi/sandbox-ipc (IPC bridge) to configure execution environments.
 *
 * Platform-specific implementations (seatbelt, bwrap, Docker) translate
 * this profile into their native configuration format.
 */

/** Filesystem isolation policy. */
interface FilesystemPolicy {
    readonly allowRead?: readonly string[];
    readonly denyRead?: readonly string[];
    readonly allowWrite?: readonly string[];
    readonly denyWrite?: readonly string[];
}
/** Network isolation policy. */
interface NetworkPolicy {
    readonly allow: boolean;
    readonly allowedHosts?: readonly string[];
}
/** OS-level resource limits for sandboxed processes. */
interface ResourceLimits {
    readonly maxMemoryMb?: number;
    readonly timeoutMs?: number;
    readonly maxPids?: number;
    readonly maxOpenFiles?: number;
}
/** Declarative sandbox profile — platform-agnostic policy. */
interface SandboxProfile {
    readonly tier: TrustTier;
    readonly filesystem: FilesystemPolicy;
    readonly network: NetworkPolicy;
    readonly resources: ResourceLimits;
    readonly env?: Readonly<Record<string, string>>;
}

export type { FilesystemPolicy, NetworkPolicy, ResourceLimits, SandboxProfile };
"
`;

exports[`@koi/core API surface ./skill-registry has stable type surface 1`] = `
"import { c as BrickRequires, p as SkillArtifact } from './brick-store-wnveACXa.js';
import { Result, KoiError } from './errors.js';
import './brick-snapshot-DTdsYtdz.js';
import './ecs-Buyeyz14.js';
import './assembly-Bp5WuiM8.js';
import './common.js';
import './webhook.js';
import './channel.js';
import './message.js';
import './filesystem-backend.js';

/**
 * Skill registry — pluggable skill discovery, publishing, versioning, and installation.
 *
 * Separate from ForgeStore (local brick persistence) and Resolver (generic read-only
 * discovery). The registry models a remote or local package catalog — think npm for skills.
 *
 * Split into SkillRegistryReader (all backends) and SkillRegistryWriter (writable backends).
 * Combined as SkillRegistryBackend for backends that support both.
 *
 * Exception: \`skillId()\` branded cast is permitted in L0 as a zero-logic identity cast.
 * Exception: \`DEFAULT_SKILL_SEARCH_LIMIT\` is a pure readonly data constant.
 */

declare const __skillIdBrand: unique symbol;
/**
 * Branded string type for skill identifiers.
 * Prevents accidental mixing with agent IDs, session IDs, etc.
 */
type SkillId = string & {
    readonly [__skillIdBrand]: "SkillId";
};
/** Create a branded SkillId from a plain string. */
declare function skillId(raw: string): SkillId;
/** Version metadata for a published skill. */
interface SkillVersion {
    readonly version: string;
    /** Subresource Integrity hash (e.g., "sha256-..."). */
    readonly integrity?: string;
    /** Unix milliseconds when this version was published. */
    readonly publishedAt: number;
    /** Whether this version has been deprecated. */
    readonly deprecated?: boolean;
}
/**
 * Catalog-level skill entry. Richer than SkillMetadata (includes version, author)
 * but lighter than SkillArtifact (no content/implementation).
 */
interface SkillRegistryEntry {
    readonly id: SkillId;
    readonly name: string;
    readonly description: string;
    readonly tags: readonly string[];
    /** Latest published version string. */
    readonly version: string;
    /** Unix ms when the latest version was published. */
    readonly publishedAt: number;
    readonly author?: string;
    /** Runtime requirements (bins, env vars, tools). Surfaced at catalog level for filtering. */
    readonly requires?: BrickRequires;
    /** Total install/download count. Optional — not all backends track this. */
    readonly downloads?: number;
}
interface SkillSearchQuery {
    /** Case-insensitive text match against name and description. */
    readonly text?: string;
    /** Filter by tags (AND — all specified tags must match). */
    readonly tags?: readonly string[];
    readonly author?: string;
    /** Max items per page. Defaults to DEFAULT_SKILL_SEARCH_LIMIT. */
    readonly limit?: number;
    /** Opaque cursor for the next page. undefined = first page. */
    readonly cursor?: string;
}
/** Default page size for skill search. */
declare const DEFAULT_SKILL_SEARCH_LIMIT: 50;
interface SkillPage {
    readonly items: readonly SkillRegistryEntry[];
    /** Opaque cursor for the next page. undefined = no more pages. */
    readonly cursor?: string;
    /** Total matching skills. Optional — some backends can't count cheaply. */
    readonly total?: number;
}
/** Describes what changed in the registry. */
type SkillRegistryChangeKind = "published" | "unpublished" | "deprecated";
/** Notification payload for registry mutations. */
interface SkillRegistryChangeEvent {
    readonly kind: SkillRegistryChangeKind;
    readonly skillId: SkillId;
    /** Version affected (for published/deprecated events). */
    readonly version?: string;
}
interface SkillRegistryReader {
    /** Search the registry with optional filters and pagination. */
    readonly search: (query: SkillSearchQuery) => SkillPage | Promise<SkillPage>;
    /** Get a single skill entry by ID. */
    readonly get: (id: SkillId) => Result<SkillRegistryEntry, KoiError> | Promise<Result<SkillRegistryEntry, KoiError>>;
    /** List all versions of a skill, newest first. */
    readonly versions: (id: SkillId) => Result<readonly SkillVersion[], KoiError> | Promise<Result<readonly SkillVersion[], KoiError>>;
    /** Download and return a SkillArtifact. Always async (I/O). */
    readonly install: (id: SkillId, version?: string) => Promise<Result<SkillArtifact, KoiError>>;
    /** Optional typed change notification. Returns unsubscribe function. */
    readonly onChange?: (listener: (event: SkillRegistryChangeEvent) => void) => () => void;
}
interface SkillPublishRequest {
    readonly id: SkillId;
    readonly name: string;
    readonly description: string;
    readonly tags: readonly string[];
    readonly version: string;
    /** Markdown source content. */
    readonly content: string;
    readonly author?: string;
    /** Subresource Integrity hash for verification. */
    readonly integrity?: string;
    /** Runtime requirements (bins, env vars, tools) for catalog-level filtering. */
    readonly requires?: BrickRequires;
}
interface SkillRegistryWriter {
    /** Publish a new skill version to the registry. */
    readonly publish: (request: SkillPublishRequest) => Result<SkillRegistryEntry, KoiError> | Promise<Result<SkillRegistryEntry, KoiError>>;
    /** Remove a skill entirely from the registry. */
    readonly unpublish: (id: SkillId) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
    /** Mark a specific version as deprecated. */
    readonly deprecate: (id: SkillId, version: string) => Result<void, KoiError> | Promise<Result<void, KoiError>>;
}
/** Full registry backend that supports both reading and writing. */
interface SkillRegistryBackend extends SkillRegistryReader, SkillRegistryWriter {
}

export { DEFAULT_SKILL_SEARCH_LIMIT, type SkillId, type SkillPage, type SkillPublishRequest, type SkillRegistryBackend, type SkillRegistryChangeEvent, type SkillRegistryChangeKind, type SkillRegistryEntry, type SkillRegistryReader, type SkillRegistryWriter, type SkillSearchQuery, type SkillVersion, skillId };
"
`;
